--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.shuyu:GSYVideoPlayer:2.0.4'
     testCompile 'junit:junit:4.12'
-
+    compile 'homhomlin.lib:ptrrv-library:1.3.1'
     //轮播图
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'com.nineoldandroids:library:2.4.0'
