--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.SplashActivity"
-            >
+        <activity android:name=".ui.activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -22,6 +21,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activity.MainActivity">
+        </activity>
+        <activity android:name=".ui.activity.DetailActivity">
         </activity>
     </application>
 
